<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.swifttarrow.nytimessearch.activities.SearchFilterActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="100">

        <TextView
            android:text="@string/begin_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tvBeginDate"
            android:layout_weight="42"
            android:gravity="bottom"
            android:paddingBottom="10dp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/etBeginDate"
            android:layout_weight="58"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="100">

        <TextView
            android:text="@string/sort_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="42"
            android:id="@+id/tvSortOrder"
            android:gravity="bottom"
            android:paddingBottom="10dp" />
        <Spinner
            android:id="@+id/spSortOrder"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="58"
            android:entries="@array/sort_order_array"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="100"
        android:layout_height="150dp">

        <TextView
            android:text="@string/news_desk_values"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tvNewsDeskValues"
            android:layout_weight="42"
            android:gravity="center_vertical" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="58">
            <CheckBox
                android:text="@string/arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/cbFashionStyle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/cbArts" />
            <CheckBox
                android:text="@string/fashion_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/cbFashionStyle" />
             <CheckBox
                android:text="@string/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSports"
                android:layout_weight="1"
                android:layout_below="@+id/cbFashionStyle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:elevation="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        tools:textColor="@android:color/white"
        android:onClick="onSubmit"/>
</LinearLayout>
